# ichigocrate

./: Cargo.toml  LICENSE  README.md  SECURITY.md  rust-toolchain.toml
.github/workflows/: ci.yml  notify-react-sync.yml
app/: Cargo.toml  README.md
app/src/: main.rs
core/: Cargo.toml  README.md
core/src/: basic.rs  errors.rs  font.rs  keycodes.rs  keymap.rs  lib.rs  machine.rs  psg.rs  ram.rs  render.rs  romajikana.rs  screen.rs  session.rs  tokens.rs
core/src/basic/: commands.rs  expr.rs  sin.rs  tokenizer.rs
core/tests/: commands.rs  control_flow.rs  editor.rs  graphics.rs  input.rs  print.rs  programs.rs  render.rs  renum.rs  session.rs  smoke.rs
core/tests/common/: mod.rs
web/: Cargo.toml  README.md  build.sh
web/demo/: index.html  main.js
web/src/: keymap.rs  lib.rs  output.rs  runner.rs  storage.rs
