[package]
name = "ichigojam-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "ichigojam"
path = "src/main.rs"

[dependencies]
ichigojam-core = { path = "../core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
cpal = "0.15"

[target.'cfg(target_os = "macos")'.dependencies]
libc = "0.2"
