[package]
name = "ichigocrate-app"
version = "0.1.0"
edition.workspace = true
license.workspace = true

[[bin]]
name = "ichigocrate"
path = "src/main.rs"

[dependencies]
ichigocrate-core = { path = "../core" }
eframe = { version = "0.29", default-features = false, features = ["default_fonts", "glow", "wayland", "x11"] }
egui = "0.29"
cpal = "0.15"
atomic_float = "1"

[target.'cfg(target_os = "macos")'.dependencies]
os_pipe = "1"
rustix = { version = "1", features = ["stdio"] }

[lints]
workspace = true
