[package]
name = "ichigojam-web"
version = "0.1.0"
edition.workspace = true
license.workspace = true

# cdylib: wasm-bindgen が読む wasm を出力。rlib: ネイティブの単体テスト用。
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
ichigojam-core = { path = "../core" }
wasm-bindgen = "0.2"
js-sys = "0.3"
console_error_panic_hook = "0.1"
base64 = "0.22"

[dependencies.web-sys]
version = "0.3"
features = [
    "Window",
    "Document",
    "HtmlCanvasElement",
    "CanvasRenderingContext2d",
    "ImageData",
    "Storage",
]
